--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "cloudinary-react": "^1.7.0",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "framer-motion": "^4.1.17",
     "graphql": "^16.0.1",
     "react": "^17.0.2",
